TodasLasPantallasCreadas Visualmente, falta implementar que se abran cuando se les de click en el menú de la ventana Principal.

--- a/TecHouseView/TecHouseView.vcxproj
+++ b/TecHouseView/TecHouseView.vcxproj
@@ -114,8 +114,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="frmConfigNombres.cpp" />
     <ClCompile Include="frmContraseña.cpp" />
     <ClCompile Include="frmPrincipal.cpp" />
+    <ClCompile Include="frmPuertasYVentanas.cpp" />
+    <ClCompile Include="frmTemperatura.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -126,19 +129,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="frmConfigNombres.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="frmContraseña.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="frmPrincipal.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="frmPuertasYVentanas.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="frmTemperatura.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="frmConfigNombres.resx">
+      <DependentUpon>frmConfigNombres.h</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmContraseña.resx">
       <DependentUpon>frmContraseña.h</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPuertasYVentanas.resx">
+      <DependentUpon>frmPuertasYVentanas.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmTemperatura.resx">
+      <DependentUpon>frmTemperatura.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
