--- a/TecHouseController/TecHouseController.vcxproj
+++ b/TecHouseController/TecHouseController.vcxproj
@@ -116,6 +116,12 @@
       <Project>{2a36d776-02d2-47b2-bebe-a6cf44b51336}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CasaController.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="CasaController.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
