--- a/TecHouseView/TecHouseView.vcxproj
+++ b/TecHouseView/TecHouseView.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="frmNuevaCasa.cpp" />
     <ClCompile Include="frmNuevoUsuario.cpp" />
     <ClCompile Include="frmNuevoUsuarioAdmi.cpp" />
+    <ClCompile Include="frmReporteNroUsuariosxTipo.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +134,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -172,6 +174,9 @@
     <ClInclude Include="frmNuevoUsuarioAdmi.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="frmReporteNroUsuariosxTipo.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmDiseñoCasa.resx">
@@ -209,6 +214,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmNuevoUsuarioAdmi.resx">
       <DependentUpon>frmNuevoUsuarioAdmi.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReporteNroUsuariosxTipo.resx">
+      <DependentUpon>frmReporteNroUsuariosxTipo.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
