Todos los usuarios pueden ver su propia casa, el admin es capaz de visualizar, editar y crear nuevos diseños de casas. Las ventanas ahora son conscientes de el usuario que ingresa a ellas.

--- a/TecHouseView/TecHouseView.vcxproj.filters
+++ b/TecHouseView/TecHouseView.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="frmReporteNroUsuariosxTipo.cpp">
       <Filter>Archivos de encabezado</Filter>
     </ClCompile>
+    <ClCompile Include="frmVerCasaNoAdmin.cpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="frmIniciarSesion.h">
@@ -96,6 +99,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="frmReporteNroUsuariosxTipo.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="frmVerCasaNoAdmin.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
