--- a/TecHouseView/TecHouseView.vcxproj
+++ b/TecHouseView/TecHouseView.vcxproj
@@ -127,6 +127,7 @@
     <ClCompile Include="frmNuevoUsuario.cpp" />
     <ClCompile Include="frmNuevoUsuarioAdmi.cpp" />
     <ClCompile Include="frmReporteNroUsuariosxTipo.cpp" />
+    <ClCompile Include="frmVerCasaNoAdmin.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -177,6 +178,9 @@
     <ClInclude Include="frmReporteNroUsuariosxTipo.h">
       <FileType>CppForm</FileType>
     </ClInclude>
+    <ClInclude Include="frmVerCasaNoAdmin.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="frmDiseñoCasa.resx">
@@ -217,6 +221,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmReporteNroUsuariosxTipo.resx">
       <DependentUpon>frmReporteNroUsuariosxTipo.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVerCasaNoAdmin.resx">
+      <DependentUpon>frmVerCasaNoAdmin.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
