Interrupciones implementadas, ventanas Menú, temperatura y puertas y ventanas se actualizan en tiempo real.

--- a/TecHouseView/TecHouseView.vcxproj
+++ b/TecHouseView/TecHouseView.vcxproj
@@ -79,6 +79,8 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <CallingConvention>
+      </CallingConvention>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
