--- a/TecHouseView/TecHouseView.vcxproj.filters
+++ b/TecHouseView/TecHouseView.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="frmConfigTemperatura.cpp">
       <Filter>Archivos de encabezado</Filter>
     </ClCompile>
+    <ClCompile Include="frmConfigLuces.cpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="frmIniciarSesion.h">
@@ -114,6 +117,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="frmConfigTemperatura.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="frmConfigLuces.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
